test/acceptance/validating/failing/type-without-preposition.spun
get "http://google.com"
set foo 5
type foo "#id"
